--- a/transport/doc/dissertation/content/explicit_Q.tex
+++ b/transport/doc/dissertation/content/explicit_Q.tex
@@ -1,5 +1,5 @@
 %--------------------------------------------------------------------------------
-\subsubsection{Definition of $Q_i^\pm$ for Explicit Euler}
+\subsubsection{Definition of Flux Bounds for Explicit Euler}
 %--------------------------------------------------------------------------------
 \begin{theorem}{Discrete Maximum Principle-Satisfying Limited Flux Bounds for
   Explicit Euler}
