--- a/transport/doc/dissertation/content/newcommands.tex
+++ b/transport/doc/dissertation/content/newcommands.tex
@@ -12,11 +12,13 @@
 \renewcommand{\L}{\mathbf{L}}
 \renewcommand{\b}{\mathbf{b}}
 \renewcommand{\r}{\mathbf{r}}
+\newcommand{\x}{\mathbf{x}}
 \newcommand{\f}{\mathbf{f}}
 \newcommand{\s}{\mathbf{s}}
 \newcommand{\dt}{\Delta t}
 
 \newcommand{\ddt}[1]{\frac{d#1}{dt}}
+\newcommand{\ppt}[1]{\frac{\partial #1}{\partial t}}
 
 \renewcommand{\ij}{_{i,j}}
 \newcommand{\sumj}{\sum\limits_j}
