--- a/transport/doc/dissertation/content/nonlinear_iteration.tex
+++ b/transport/doc/dissertation/content/nonlinear_iteration.tex
@@ -104,7 +104,7 @@ The update is performed with a relaxation parameter $\alpha$:
 %--------------------------------------------------------------------------------
 \subsection{Theta FCT Scheme}
 %--------------------------------------------------------------------------------
-Discretizing Equation \eqref{semidiscrete_limited} using the theta scheme
+Discretizing Equation \eqref{limited_semidiscrete} using the theta scheme
 given in Section \ref{theta} gives
 \begin{equation}
    \M^L\frac{\U^{n+1}-\U^n}{\dt^{n+1}} + (1-\theta)\A^L\U^{n}
