--- a/transport/doc/dissertation/content/steadystate_FCT.tex
+++ b/transport/doc/dissertation/content/steadystate_FCT.tex
@@ -18,7 +18,7 @@ where $\LF$ denotes row-wise dot products: $(\LF)_i = L_{i,:}F_{i,:}^T
 = \sumj L\ij F\ij$ and $\U$ is the FCT solution.  The limiter $\L$ is
 defined in Section \ref{L}.
 
-Combining Equations \eqref{ss_f} and \eqref{steadystate_high}
+Combining Equations \eqref{ss_f} and \eqref{high_ss}
 gives the definition of $\f$:
 \begin{equation}
    \f \equiv \pr{\D^L-\D^H}\U^H \eqp
