--- a/transport/doc/dissertation/content/steadystate_Q.tex
+++ b/transport/doc/dissertation/content/steadystate_Q.tex
@@ -1,5 +1,5 @@
 %--------------------------------------------------------------------------------
-\subsubsection{Definition of $Q_i^\pm$ for the Steady-State Case}
+\subsubsection{Definition of Flux Bounds for Steady-State}
 %--------------------------------------------------------------------------------
 \begin{theorem}{Steady-State Discrete Maximum Principle-Satisfying Limited
   Flux Bounds}
