--- a/transport/doc/dissertation/content/theta_DMP.tex
+++ b/transport/doc/dissertation/content/theta_DMP.tex
@@ -1,4 +1,5 @@
-\subsubsection{$\theta$-Scheme}
+%--------------------------------------------------------------------------------
+\subsubsection{Theta Scheme}
 %--------------------------------------------------------------------------------
 \begin{theorem}{$\theta$-Scheme Discrete Maximum Principle}
 If the CFL-like condition
