--- a/transport/doc/dissertation/content/theta_Q.tex
+++ b/transport/doc/dissertation/content/theta_Q.tex
@@ -1,5 +1,5 @@
 %--------------------------------------------------------------------------------
-\subsubsection{Definition of $Q_i^\pm$ for $\theta$-Scheme}
+\subsubsection{Definition of Flux Bounds for Theta Scheme}
 %--------------------------------------------------------------------------------
 \begin{theorem}{Discrete Maximum Principle-Satisfying Limited Flux Bounds for
   the $\theta$-Scheme}
