--- a/transport/doc/dissertation/content/transient_FCT.tex
+++ b/transport/doc/dissertation/content/transient_FCT.tex
@@ -2,17 +2,96 @@
 \subsection{Transient FCT Schemes}
 %--------------------------------------------------------------------------------
 In this section, the general FCT scheme for the transient case is presented.
-The flux correction vector $\f(t)$ is defined such that:
-\begin{equation}\label{semidiscrete_f}
-   \M^L\frac{d\U^{H}}{dt} + \A^L\U^H(t) = \b(t) + \f(t) \eqp
+The flux correction vector $\f(t)$ is defined such that
+\begin{equation}\label{fdef_semidiscrete}
+   \M^L\ddt{U^{H}} + \A^L\U^H(t) = \b(t) + \f(t) \eqp
 \end{equation}
 Decomposing the correction flux into $\F(t)$ and applying a limiter $\L$ gives
-\begin{equation}\label{semidiscrete_limited}
-   \M^L\frac{d\U}{dt} + \A^L\U(t) = \b(t) + \LF(t) \eqp
+\begin{equation}\label{limited_semidiscrete}
+   \M^L\ddt{\U} + \A^L\U(t) = \b(t) + \LF(t) \eqp
 \end{equation}
 where $(\LF(t))_i = L_{i,:}F_{i,:}^T = \sumj L\ij F\ij$
 and $\U(t)$ is the FCT solution. The limiter $\L$ is
 defined in Section \ref{L}.
+Combining Equations \eqref{fdef_semidiscrete} and \eqref{high_semidiscrete}
+gives the definition of $\f(t)$:
+\begin{equation}\label{f_semidiscrete}
+   \f(t) \equiv -\pr{\M^C-\M^L}\ddt{\U^H} + \pr{\D^L-\D^H(t)}\U^H(t).
+\end{equation}
+Since $\M^C-\M^L$ and $\D^L-\D^H(t)$ are symmetric
+and feature zero row and column sums, a valid decomposition for $\f(t)$,
+called $\F(t)$, is
+\begin{equation}
+   F\ij(t) = -m\ij\pr{\ddt{U_j^H} - \ddt{U_i^H}}
+   + \pr{D\ij^L-D\ij^H(t)}\pr{U_j^H(t) - U_i^H(t)},
+\end{equation}
+where $m\ij$ is the $i,j$th element of the consistent mass matrix.
+%--------------------------------------------------------------------------------
+\subsubsection{Explicit Euler FCT Scheme}
+%--------------------------------------------------------------------------------
+In this section, the explicit Euler FCT scheme is presented.
+The flux correction vector $\f$ is defined such that
+\begin{equation}\label{fdef_FE}
+   \M^L\frac{\U^{H}-\U^n}{\dt^{n+1}} + \A^L\U^{H,n} = \b^n + \f \eqp
+\end{equation}
+Decomposing the correction flux into $\F$ and applying a limiter $\L$ gives
+\begin{equation}\label{limited_FE}
+   \M^L\frac{\U^{H}-\U^n}{\dt^{n+1}} + \A^L\U^{H,n} = \b^n + \LF \eqc
+\end{equation}
+where $(\LF)_i = L_{i,:}F_{i,:}^T = \sumj L\ij F\ij$
+and $\U^{n+1}$ is the FCT solution. The limiter $\L$ is
+defined in Section \ref{L}.
+Combining Equations \eqref{fdef_FE} and \eqref{high_FE}
+gives the definition of $\f$:
+\begin{equation}\label{f_FE}
+   \f \equiv -\pr{\M^C-\M^L}\frac{\U^H-\U^n}{\dt^{n+1}}
+   + \pr{\D^L-\D^{H,n}}\U^n \eqp
+\end{equation}
+Since $\M^C-\M^L$ and $\D^L-\D^{H,n}$ are symmetric
+and feature zero row and column sums, a valid decomposition for $\f$,
+called $\F$, is
+\begin{equation}
+   F\ij = -m\ij\pr{\frac{U_j^H - U_j^n}{\dt^{n+1}}
+   - \frac{U_i^H - U_i^n}{\dt^{n+1}}}
+   + \pr{D\ij^L-D\ij^{H,n}}\pr{U_j^n - U_i^n},
+\end{equation}
+where $m\ij$ is the $i,j$th element of the consistent mass matrix.
+%--------------------------------------------------------------------------------
+\subsubsection{Theta FCT Scheme}
+%--------------------------------------------------------------------------------
+In this section, the $\theta$ FCT scheme is presented.
+The flux correction vector $\f$ is defined such that
+\begin{equation}\label{fdef_theta}
+  \M^L\frac{\U^H-\U^n}{\dt}
+  + (1-\theta)\A^L\U^n + \theta\A^L\U^H
+  = (1-\theta)\b^n + \theta\b^{n+1} + \f \eqp
+\end{equation}
+Decomposing the correction flux into $\F$ and applying a limiter $\L$ gives
+\begin{equation}\label{limited_theta}
+  \M^L\frac{\U^H-\U^n}{\dt}
+  + (1-\theta)\A^L\U^n + \theta\A^L\U^H
+  = (1-\theta)\b^n + \theta\b^{n+1} + \LF \eqp
+\end{equation}
+where $(\LF)_i = L_{i,:}F_{i,:}^T = \sumj L\ij F\ij$
+and $\U^{n+1}$ is the FCT solution. The limiter $\L$ is
+defined in Section \ref{L}.
+Combining Equations \eqref{fdef_theta} and \eqref{high_theta}
+gives the definition of $\f$:
+\begin{equation}\label{f_theta}
+   \f \equiv -\pr{\M^C-\M^L}\frac{\U^H-\U^n}{\dt^{n+1}}
+   + (1-\theta)\pr{\D^L-\D^{H,n}}\U^n 
+   + \theta    \pr{\D^L-\D^{H,n+1}}\U^H \eqp
+\end{equation}
+Since $\M^C-\M^L$ and $\D^L-\D^{H,n}$ are symmetric
+and feature zero row and column sums, a valid decomposition for $\f$,
+called $\F$, is
+\begin{multline}
+   F\ij = -m\ij\pr{\frac{U_j^H - U_j^n}{\dt^{n+1}}
+   - \frac{U_i^H - U_i^n}{\dt^{n+1}}}
+   + (1-\theta)\pr{D\ij^L-D\ij^{H,n}}  \pr{U_j^n - U_i^n}\\
+   + \theta    \pr{D\ij^L-D\ij^{H,n+1}}\pr{U_j^H - U_i^H} \eqc
+\end{multline}
+where $m\ij$ is the $i,j$th element of the consistent mass matrix.
 %--------------------------------------------------------------------------------
 %\begin{proposition}{Discrete $L^\infty$ Norm Stability}
    %Schemes that satisfy the bounds given in Definition \ref{FCTbounds} are
@@ -42,16 +121,3 @@ defined in Section \ref{L}.
    %\]
 %\end{proof}
 %--------------------------------------------------------------------------------
-Combining Equations \eqref{semidiscrete_f} and \eqref{semidiscrete_high}
-gives the definition of $\f(t)$:
-\begin{equation}\label{gtf}
-   \f(t) \equiv -\pr{\M^C-\M^L}\ddt{\U^H} + \pr{\D^L-\D^H(t)}\U^H(t).
-\end{equation}
-Since $\M^C-\M^L$ and $\D^L-\D^H(t)$ are symmetric
-and feature zero row and column sums, a valid decomposition for $\f(t)$,
-called $\F(t)$, is
-\begin{equation}
-   F\ij(t) = -m\ij\pr{\ddt{U_j^H} - \ddt{U_i^H}}
-   + \pr{D\ij^L-D\ij^H(t)}\pr{U_j^H(t) - U_i^H(t)},
-\end{equation}
-where $m\ij$ is the $i,j$th element of the consistent mass matrix.
