--- a/transport/doc/meetings/meetings.tex
+++ b/transport/doc/meetings/meetings.tex
@@ -1,5 +1,9 @@
 \documentclass{article}
-\setlength{\parindent}{0cm}
+\setlength{\parindent}{0in}
+\setlength{\evensidemargin}{0in}
+\setlength{\oddsidemargin}{0in}
+\setlength{\topmargin}{0in}
+\setlength{\textwidth}{6.5in}
 \input{../dissertation/content/newcommands}
 \begin{document}
 \input{6-22-2015}
