--- a/transport/doc/meetings/meetings.tex
+++ b/transport/doc/meetings/meetings.tex
@@ -1,10 +1,17 @@
 \documentclass{article}
+\usepackage{amsmath}
+
 \setlength{\parindent}{0in}
 \setlength{\evensidemargin}{0in}
 \setlength{\oddsidemargin}{0in}
 \setlength{\topmargin}{0in}
 \setlength{\textwidth}{6.5in}
+
 \input{../dissertation/content/newcommands}
+
 \begin{document}
 \input{6-22-2015}
+\input{6-23-2015}
+\bibliographystyle{plain}
+\bibliography{../dissertation/references}
 \end{document}
